--- a/Web/CursoEmVideo/JavaScript/Desafios/Conversor_Medidas/index.html
+++ b/Web/CursoEmVideo/JavaScript/Desafios/Conversor_Medidas/index.html
@@ -5,20 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medidas</title>
-  <style>
-    input{
-      padding: 20px;
-      font-size: 18px;
-      margin: 25px;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Conversor de Medidas</h1>
   <input type="button" value="Converter" onclick="conv()">
   <div id="res">
-    &UpArrow; Clique no botão acima para iniciar &UpArrow;
+    <h3>&UpArrow; Clique no botão acima para iniciar &UpArrow;</h3>
   </div>
   
   <script>
