--- a/Web/CursoEmVideo/JavaScript/Desafios/Desconto/index.html
+++ b/Web/CursoEmVideo/JavaScript/Desafios/Desconto/index.html
@@ -5,14 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desconto</title>
-  <style>
-    input{
-      cursor: pointer;
-      margin: 20px;
-      font-size: 18px;
-      padding: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Calcular Desconto</h1>
