--- a/Web/Programadores/CrisTech/LandingPage_Gym/index.html
+++ b/Web/Programadores/CrisTech/LandingPage_Gym/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Academia</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <script src="https://kit.fontawesome.com/e830b2bb78.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -18,8 +19,8 @@
                 <li><a href="#">Aulas</a></li>
                 <li><a href="#">Agenda</a></li>
                 <li><a href="#">Contatos</a></li>
-                <li><a href="#"><img src="./assets/facebook-brands.svg" width="25px" alt=""></a></li>
-                <li><a href="#"><img src="./assets/instagram-brands.svg" width="25px" alt=""></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </nav>
     </header>
