hack_mode+labelFix+Rebirth1+imgs
Update style.css

imgs

--- a/Web/Eu/FruitClicker/index.html
+++ b/Web/Eu/FruitClicker/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <h3>Rebirth <span id="rebirth-value">0</span></h3>
     <h1>Level <span id="level">1</span></h1>
   </header>
   
@@ -19,6 +20,8 @@
       <img src="./assets/banana.jpg" alt="banana" id="fruit1">
     </div>
     <button class="btn reset" onclick="reset()">Reset</button>
+    <button class="btn rebir" onclick="rebir()">Rebirth</button>
+    <button class="btn hack hidden" onclick="hack()">Hack</button>
   </main>
   
   <script src="./assets/a.js"></script>
