--- a/Web/Eu/Mercadinho3.0/index.html
+++ b/Web/Eu/Mercadinho3.0/index.html
@@ -25,13 +25,13 @@
                     <span class="material-symbols-outlined">
                         shopping_cart
                         </span>
-                    <input type="text" name="nome" id="nome" placeholder="Nome do produto" required>
+                    <input type="text" name="nome" id="nome" placeholder="Nome do produto" minlength="2" maxlength="10" required>
                 </div>
                 <div class="input-controls">
                     <span class="material-symbols-outlined">
                         paid
                         </span>
-                    <input type="number" name="price" id="price" placeholder="Valor" required>
+                    <input type="text" maxlength="6" name="price" id="price" placeholder="Valor" required>
                 </div>
             </section>
 
